--- a/radiomaps/views/default/index.html
+++ b/radiomaps/views/default/index.html
@@ -26,19 +26,20 @@
 <script src="{{=URL('static','js/leaflet.js')}}"></script>
     <script type="text/javascript">
         $( "#mapid2" ).height( "100vh" )
-        var tilesUrl2 = 'https://mapsmaps.pythonanywhere.com/default/gettile/example/{z}/{x}/{y}.png'
-        tilesLayer2 = new L.TileLayer(tilesUrl2);
+        tilesLayer2 = new L.TileLayer('https://mapsmaps.pythonanywhere.com/default/gettile/example/{z}/{x}/{y}.png');
 
-        var wmtsurl = 'http://localhost:8080/geoserver/gwc/service/wmts?'
+        var wmsurl = 'http://192.168.56.30:8080/geoserver/ows?'
+        var wmsLayer = L.tileLayer.wms(wmsurl, { layers: '{{=layer}}',format: 'image/png',  transparent: true})
 
-        var wmsurl = 'http://localhost:8080/geoserver/ows?'
-        var wmsLayer = L.tileLayer.wms(wmsurl, { layers: 'tiger-ny'})
+        var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+            attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
+        });
 
         map2 = new L.Map('mapid2');
-//         map2.addLayer(tilesLayer2);
-        map2.setView([-74,40.75], 5);
-//         map.fitBounds(wmsLayer.getBounds());
+        map2.fitBounds({{=extent}});
+        map2.addLayer(Esri_WorldImagery);
         map2.addLayer(wmsLayer);
+
 
     </script>
 {{end page_js}}
