--- a/radiomaps/views/default/index.html
+++ b/radiomaps/views/default/index.html
@@ -5,31 +5,33 @@
 {{block header}}
 <div class="jumbotron jumbotron-fluid" style="background-color: #333; color:white; padding:30px;word-wrap:break-word;">
   <div class="center">
-      <div id="mapid23" style="width:100%;"></div>
+      <div id="mapid2" style="width:100%;"></div>
   </div>
   <div class="center">
       <div id="movie" style="width:100%;">
-           <h2>movie here</h2>
+           <h2>Audio here</h2>
+          <audio controls ended="myScript">
+<!--               <source src="http://funkturm.radio-zusa.net:8000/opus" type='audio/ogg; codecs="opus"'> -->
+              <source id="radio1" src="https://192.168.56.30/radiomaps/default/streamer" type='audio/mpeg; codecs="opus"'>
+            Your browser does not support the audio element.
+         </audio>
       </div>
   </div>
 </div>
-
 {{end}}
 
 <div class="row">
   <div class="col-md-12">
-    {{if 'message' in globals():}}
-    <h2>{{=message}}</h2>
-    {{elif 'content' in globals():}}
-    {{=content}}
-    {{else:}}
     {{=BEAUTIFY(response._vars)}}
-    {{pass}}
   </div>
 </div>
 {{block page_js}}
 <script src="{{=URL('static','js/leaflet.js')}}"></script>
     <script type="text/javascript">
+        function myScript(){
+            document.getElementById("radio1").src = "https://192.168.56.30/radiomaps/default/streamer";
+            document.getElementById("radio1").load(); }
+
         $( "#mapid2" ).height( "100vh" )
 //         tilesLayer2 = new L.TileLayer('https://mapsmaps.pythonanywhere.com/default/gettile/example/{z}/{x}/{y}.png');
 
@@ -39,12 +41,10 @@
                 layer.bindPopup(feature.properties.popupContent);
             }
         }
-
         map2 = new L.Map('mapid2').setView([0,0],2); // [lat,lng]
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
             }).addTo(map2);
-
        L.geoJSON({{=XML(str_json)}}, {
              style: {
             "color": "#ff7800",
